Improve schema
