# apps/api/src/api/v1/user/bankAccount/bankAccount.controller.ts
@@ -4,8 +4,8 @@ import { FinanceErrors } from "@finance/errors-nest";
 import { Mediator } from "@finance/libs-types";
 import { Body, Controller, Get, Inject, Param, Put, ValidationPipe } from "@nestjs/common";
 import { Delete } from "@nestjs/common/decorators";
-import { IdentityParams } from "../../identity.params";
-import { UserIdentityParams } from "../userIdentity.params";
+import { IdentityParam, IdentityParams } from "../../identity.params";
+import { UserIdentityParam, UserIdentityParams } from "../userIdentity.params";
 import { CreateBankAccountBody } from "./createBankAccount.body";
 
 @Controller("/api/v1/user/:userIdentity/bankAccount")
@@ -14,6 +14,7 @@ export class BankAccountController {
 
 	@Get()
 	@FinanceErrors([EntryNotFoundError])
+	@UserIdentityParam()
 	async get(
 		@Param() param: UserIdentityParams,
 	) {
@@ -26,6 +27,7 @@ export class BankAccountController {
 
 	@Put()
 	@FinanceErrors([DuplicateEntryError, EntryNotFoundError])
+	@UserIdentityParam()
 	async insert(
 		@Param() param: UserIdentityParams,
 		@Body(new ValidationPipe()) body: CreateBankAccountBody
@@ -40,6 +42,8 @@ export class BankAccountController {
 
 	@Delete("/:identity")
 	@FinanceErrors([EntryNotFoundError])
+	@IdentityParam()
+	@UserIdentityParam()
 	async delete(
 		@Param() param: IdentityParams
 	) {
