# apps/api/src/api/v1/user/userIdentity.params.ts
@@ -1,7 +1,19 @@
+import { ApiParam } from "@nestjs/swagger";
 import { IsString, MinLength } from "class-validator";
 
 export class UserIdentityParams {
 	@IsString()
 	@MinLength(5)
 	userIdentity!: string;
+}
+
+export function UserIdentityParam() { 
+	return ApiParam({
+		name: "userIdentity",
+		description: "User identity",
+		schema: {
+			type: "string",
+			minLength: 5,
+		}
+	});
 }
